application-prod.properties V1